config-root/namespaces/jx-staging/gohttpaws/gohttpaws-gohttpaws-deploy.yaml
# Source: gohttpaws/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gohttpaws-gohttpaws
  labels:
    draft: draft-app
    chart: "gohttpaws-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'gohttpaws'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: gohttpaws-gohttpaws
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: gohttpaws-gohttpaws
    spec:
      serviceAccountName: gohttpaws-gohttpaws
      containers:
        - name: gohttpaws
          image: "971057899310.dkr.ecr.us-east-1.amazonaws.com/vnemane/gohttpaws:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
