config-root/namespaces/jx-staging/gohttpaws/gohttpaws-ingress.yaml
# Source: gohttpaws/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'gohttpaws'
  name: gohttpaws
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: gohttpaws
                port:
                  number: 80
      host: gohttpaws-jx-staging.174.129.120.12.nip.io
